--- a/style.css
+++ b/style.css
@@ -7,5 +7,9 @@
   height: 20vw;
   width: 20vw;
   margin: 1rem;
-  background-color: red;
+  border: green 1px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
 }
